@@ -5,6 +5,7 @@
 New features:
 - X-Kore works on Windows 98/ME now!
 - Properly recognizes advanced seconds classes.
+- The console window title now displays useful information.
 
 Bug fixes:
 - "vender" command now properly detects the "end" argument. Bugfix by Fenris.
